# Maxawon

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
docs/: design-rules.md  packaging-boundary.md
electron/: main.js  ppt-forger-data.js  ppt-forger.js  preload.js  runtime-check.js
electron/renderer/: app-init.js  app.js  index.html  styles.css  ui-assets.css
kind_downloads/: kind_manifest.json
kind_downloads/kind_result_pages/: 001_post_page_00001.body
kind_downloads/viewer_html/: 20260622000637.html  20260622000732.html  20260622000742.html  20260622000812.html  20260622000828.html  20260623000129.html  20260623000132.html  20260623000782.html  20260623000795.html  20260623000817.html  20260624000579.html  20260624000773.html  20260624000792.html  20260625000517.html  20260626000002.html  20260626000003.html  20260626000006.html  20260626000552.html  20260626000656.html  20260626000779.html
kind_downloads/viewer_html_contents/: 20260622000637.html  20260622000732.html  20260622000742.html  20260622000812.html  20260622000828.html  20260623000129.html  20260623000132.html  20260623000782.html  20260623000795.html  20260623000817.html  20260624000579.html  (+9 more)
src/: mezzanine_parser.py  parsing_utils.py  participant_parser.py  xml_loader.py
tests/: ppt-forger.test.js  runtime-check.test.js  test_browser_recovery.py  test_candidate_resolution.py  test_network_logger.py  test_table_capture.py  test_weekly_mezz_export.py  test_weekly_mezz_html_parser.py  test_weekly_mezz_stock_code.py
(+33 files in other folders)
