[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "maxawon"
version = "2.5.3"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "openpyxl>=3.1.5",
    "playwright>=1.45",
    "requests>=2.31",
]

[project.optional-dependencies]
build = [
    "pyinstaller>=6",
]

[project.scripts]
maxawon = "maxawon.app:main"
weekly-mezz = "weekly_mezz.cli:main"
maxawon-worker = "maxawon.worker:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
